<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">الحلقات</string>
    <string name="addNewHalaqa">إضافة حلقة جديدة</string>
    <string name="halaqa_name">إسم الحلقة</string>
    <string name="saturday_arabic">السبت</string>
    <string name="sunday_arabic">الأحد</string>
    <string name="am_vs_pm">ص</string>
    <string name="double_zeros">٠٠</string>
    <string name="one_space" />
    <string name="space_colon_space">:</string>
    <string name="pick_date">أو حدد وقت
    </string>
    <string name="write_halaqa_name">أكتب إسم الحلقة</string>
    <string name="monday_arabic">الإثنين</string>
    <string name="tuesday_arabic">الثلاثاء</string>
    <string name="wednesday_arabic">الأربعاء</string>
    <string name="thursday_arabic">الخميس</string>
    <string name="friday_arabic">الجمعة</string>
    <string name="add_new">إضافة عنصر جديد</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="halaqa_repeats">رقم</string>
    <string name="halaqaTimes">مواعيد الحلقة</string>
    <string name="moreInfo">معلومات اضافية</string>
    <string name="save">حفظ</string>
    <string name="namePlease">يرجى ادخال اسم الحلقة</string>
    <string name="add_student">إضافة حافظ جديد</string>
    <string name="view_student">بيانات الحافظ</string>
    <string name="edit_student_title">تعديل بيانات الحافظ</string>
    <string name="add_halaqa">إضافة حلقة جديدة</string>
    <string name="studentName">الإسم</string>
    <string name="studentInfo">معلومات إضافية</string>
    <string name="studentHWS">الواجبات الحالية</string>
    <string name="stNamePlease">يرجى إدخال إسم الحافظ</string>
    <string name="birthdate">تاريخ الميلاد</string>
    <string name="birthDateHint" >تحديد تاريخ الميلاد:</string>
    <string name="done_picking_date">done picking date</string>
    <string name="hw_start">البداية:</string>
    <string name="hw_end">النهاية:</string>
    <string name="add_hw">إضافة واجب</string>
    <string name="hw_title">ادخل عنوان الواجب ، مثال: حفظ ، مراجعة ، ورد</string>
    <string name="add_deadline_btn">إضافة موعد</string>
    <string name="date_not_set">لم يتم تحديد الموعد</string>
    <string name="delete_date">إزالة الموعد</string>
    <string name="delete">حذف</string>
    <string name="after_week">+إسبوع</string>
    <string name="after_day">+يوم</string>
    <string name="yes">نعم</string>
    <string name="cancel">إلغاء</string>
    <string name="edit_student">editStudent</string>
    <string name="hw_desc">:وصف الواجب</string>
    <string name="confirmDeleteStudent">هل أنت متأكد من حذف هذا الطالب؟</string>
    <string name="alwagebat_text">الواجبات:</string>
    <string name="logo">LOGO</string>
    <string name="add_halaqa_date">إضافة موعد للحلقة</string>
    <string name="rep">التكرار:</string>
    <string name="daily">يومي</string>
    <string name="weekly">إسبوعي</string>
    <string name="monthly">شهري</string>
    <string name="other_rep">آخر</string>
    <string name="no_rep">بدون</string>
    <string name="day">يوم</string>
    <string name="custom_rep_helping_text">تكرار كل</string>
    <string name="days_number">اكتب عدد الأيام (رقم)</string>
    <string name="no">لا</string>
    <string name="choose_time_question">هل تريد تحديد وقت في اليوم؟</string>

    <string name="mdtp_ok">موافق</string>
    <string name="mdtp_cancel">إلغاء</string>
    <string name="next_halaqa">+الحلقة التالية</string>
    <string name="add_date">إضافة او تغيير الموعد</string>
    <string name="halaqaNamePlease">يرجى إدخال إسم الحلقة</string>
    <string name="view_halaqa">عن الحلقة</string>
    <string name="clear_date">إزالة الموعد</string>
    <string name="halaqa_dates_text">مواعيد الحلقة:</string>
    <string name="confirmDeleteHalaqa">هل أنت متأكد من حذف هذا الحلقة؟</string>
    <string name="students">الطلبة:</string>
    <string name="add_students_to_halaqa">إضافة طلبة إلى الحلقة</string>
    <string name="choose_students">اختر الطلبة:</string>
    <string name="edit_halaqa">تعديل الحلقة</string>
    <string name="add_deadline"> + إضافة موعد</string>
    <string name="rating_hint">من 10</string>
    <string name="rating">التقييم:</string>
    <string name="_0_5">+0.5</string>
    <string name="__0_5">-0.5</string>
    <string name="zero">0.0</string>
    <string name="background">background</string>
    <string name="navigation_drawer_open">عرض</string>
    <string name="navigation_drawer_close">إغلاق</string>
</resources>
