<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StHq_ViewEditAdd.HalaqaActivity"
    android:layoutDirection="rtl">

    <EditText
        android:id="@+id/halaqaName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:ems="10"
        android:hint="@string/write_halaqa_name"
        android:inputType="text"
        android:singleLine="true"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/halaqaTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:ems="10"
        android:hint="@string/halaqaTimes"
        android:inputType="textMultiLine"
        android:importantForAutofill="no"/>


    <EditText
        android:id="@+id/halaqaInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:ems="10"
        android:hint="@string/moreInfo"
        android:inputType="textMultiLine"

        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/save" />

</LinearLayout>