<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="5dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="rtl"
    android:background="@drawable/gray_bg_10radius"
    android:layout_margin="5dp">

    <TextView
        android:padding="5dp"
        android:layout_margin="5dp"
        android:textSize="20sp"
        android:id="@+id/pickedDateTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageButton
        android:layout_margin="10dp"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:tint="@android:color/holo_red_light"
        android:background="@drawable/gray_bg_10radius"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/clearDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/delete" />


    <LinearLayout
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_margin="5dp"
        android:background="@drawable/gray_bg_10radius"
        app:layout_constraintTop_toBottomOf="@id/pickedDateTextView"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:id="@+id/rep_text"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/rep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/reps_rad_group"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/daily_rep"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:text="@string/daily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/weekly_rep"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:text="@string/weekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/monthly_rep"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:text="@string/monthly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/other_rep"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:text="@string/other_rep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:checked="true"
                android:id="@+id/no_rep"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:text="@string/no_rep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/custom_rep_write"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/reps_rad_group">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/custom_rep_helping_text" />

        <EditText
            android:id="@+id/custom_rep_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/gray_bg_10radius"
            android:hint="@string/days_number"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:padding="10dp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>