<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddingStudentActivity">

    <EditText
        android:id="@+id/studentName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:autofillHints="@string/studentName"
        android:ems="10"
        android:hint="@string/studentName"
        android:inputType="textPersonName"
        android:singleLine="true" />

    <EditText
        android:id="@+id/studentInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:autofillHints="@string/studentInfo"
        android:ems="10"
        android:hint="@string/studentInfo"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/studentHWS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:autofillHints="@string/studentHWS"
        android:ems="10"
        android:hint="@string/studentHWS"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/saveButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/save"
        android:theme="@android:style/Animation" />
</LinearLayout>