<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp"
    android:background="@drawable/gray_bg_10radius"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:textStyle="bold|italic"
            android:padding="3dp"
            android:textSize="22sp"
            android:id="@+id/hw_title"
            android:text="@string/hw_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:textAlignment="viewStart"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/hw_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:textSize="16sp"
            android:text="@string/hw_desc" />

        <TextView
            android:padding="3dp"
            android:textSize="16sp"
            android:id="@+id/deadline_date_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/date_not_set" />
    </LinearLayout>

    <LinearLayout
        android:layout_margin="5dp"
        android:layout_weight="0"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:labelFor="@+id/cur_rating"
            android:layout_margin="3dp"
            android:text="@string/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:minWidth="10dp"
                android:padding="7dp"
                android:text="@string/zero"
                android:id="@+id/cur_rating"
                android:background="@drawable/bg_white_2"
                android:layout_margin="3dp"
                android:inputType="numberDecimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />

            <ImageButton
                android:id="@+id/check_save_button"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_baseline_save_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/save" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/edit_rating_layout"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/plus_half"
                android:textColor="@android:color/holo_green_light"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:text="@string/_0_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>



            <TextView
                android:id="@+id/minus_half"
                android:textColor="@android:color/holo_red_light"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:text="@string/__0_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>