<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp"
    android:background="@drawable/bg1"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <Button
        android:id="@+id/delete_hw"
        android:layout_width="32dp"
        android:layout_height="15dp"
        android:layout_gravity="end"
        android:layout_margin="7dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/delete"
        android:text="@string/delete"
        android:textColor="@android:color/holo_red_light"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/hw_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:autofillHints="حفظ,مراجعة,ورد"
        android:ems="10"
        android:hint="@string/hw_title"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:text="@string/hw_start" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/sura_start_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:entries="@array/sura_names"
            android:spinnerMode="dialog"
            />

        <Spinner
            android:id="@+id/ayah_start_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:text="@string/hw_end" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:orientation="horizontal">

        <Spinner
            android:layout_weight="1"
            android:id="@+id/sura_end_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:entries="@array/sura_names"
            android:spinnerMode="dialog" />

        <Spinner
            android:layout_weight="1"
            android:id="@+id/ayah_end_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/deadline_date_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/date_not_set" />

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/moreDay"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/after_day"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/moreWeek"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/after_week"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/add_deadline"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/add_deadline_btn"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/date_delete"
            android:layout_width="57dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="@android:color/transparent"
            android:text="@string/delete_date"
            android:textColor="@android:color/holo_red_light"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>